# diffstory

./: .gitignore  Documentation.md  LICENSE  PHASE2_CONTEXT.md  README.md  deploy.sh  pyproject.toml  requirements.md
.github/workflows/: publish.yml
src/diffstory/: __init__.py  __main__.py  cli.py  cli.py.phase2  diff_parser.py  git_utils.py  git_utils.py.phase2  html_generator.py  loader.py  syntax.py
src/diffstory/generators/: __init__.py  get_css.py  get_js.py
